--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -4,7 +4,6 @@ h1 {
 
 ul {
 	padding: 0;
-	max-width: 600px;
   margin: 0 auto;
   width: 100%;
 }
