--- a/src/components/landing-page/landing-page.css
+++ b/src/components/landing-page/landing-page.css
@@ -4,17 +4,17 @@ h1.welcome {
   height: fit-content;
   font-size: 30px;
   text-align: center;
-  color: black;
-  margin: -18px 2px 0 1%;
+  /* color: black; */
+  /* margin: -18px 2px 0 1%; */
   padding: 0 1%;
   word-wrap: break-word;
 }
 
-.landing, p.desc{
+.landing {
   margin: 6px auto 6px 5px;
   width: 280px;
   padding: 2%;
-  background-color: rgba(19, 96, 102, 0.76);
+  background-color: rgb(19, 96, 102);
   border-radius: 5px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -31,7 +31,7 @@ h1.welcome {
 p.desc {
   text-align: start;
   color: white;
-  margin: 5px 2px 0 -16px;
+  margin: 15px 2px 0 -16px;
   width: 260px;
   padding: 2%;
   font-size: 20px;
